changing logo url

--- a/about/index.html
+++ b/about/index.html
@@ -93,7 +93,7 @@
   <body>
     <header id="header">
       <section class="content">
-        <a href="../index.html" class="logo-link">
+        <a href="../" class="logo-link">
           <img
             src="../assets/images/logo-mobile.svg"
             title="Ricardo Vargas | Home page"
