--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="introduction-content">
         <header class="custom-header">
           <h1 class="page-title page-title-left">Hi, I'm Ricardo</h1>
-          <h2 class="page-sub-title">Front-end developer</h2>
+          <h2 class="page-sub-title">Front end developer</h2>
         </header>
         <p>
           I'm an honest and hardworking person who loves to chat, meet people
