--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -159,7 +159,7 @@
           </header>
           <p>
             Working as React developer in the grain storage module, building new
-            features, fixing bugs and re-wrinting class base components to
+            features, fixing bugs and re-writing class base components to
             function components.
           </p>
         </div>
@@ -185,8 +185,8 @@
             <h2>Megawork | 2012 - 2014</h2>
           </header>
           <p>
-            I worked with .Net 3.0 and C# to created a suppliers pricing web
-            application that integrates with SAP. Also developed web sites and
+            I worked with .Net 3.0 and C# to create a supplier pricing web
+            application that integrates with SAP. Also developed websites and
             CMS by demand and I had some basic ABAP training.
           </p>
         </div>
@@ -199,8 +199,8 @@
             <h2>Phidelis | 2012 - 2012</h2>
           </header>
           <p>
-            As .Net developer I worked in a web application for managing schools
-            and universities, fixing bug's, creating custom features and
+            As a .Net developer I worked in a web application for managing
+            schools and universities, fixing bug's, creating custom features and
             training users.
           </p>
         </div>
@@ -227,7 +227,7 @@
           </header>
           <p>
             I Worked as web developer using .Net/C# for creating CMS and other
-            systems, also created web sites by demand and helped creating a News
+            systems, also created web sites by demand and helped create a News
             web app.
           </p>
         </div>
@@ -262,8 +262,8 @@
         </header>
         <p id="mobile-job-description-1" class="closed">
           Working as React developer in the grain storage module, building new
-          features, fixing bugs and re-wrinting class base components to
-          function components.
+          features, fixing bugs and re-writing class base components to function
+          components.
         </p>
       </section>
       <section class="experience-section-mobile">
@@ -326,8 +326,8 @@
           <hr />
         </header>
         <p id="mobile-job-description-3" class="closed">
-          I worked with .Net 3.0 and C# to created a suppliers pricing web
-          application that integrates with SAP. Also developed web sites and CMS
+          I worked with .Net 3.0 and C# to create a supplier pricing web
+          application that integrates with SAP. Also developed websites and CMS
           by demand and I had some basic ABAP training.
         </p>
       </section>
@@ -359,7 +359,7 @@
           <hr />
         </header>
         <p id="mobile-job-description-4" class="closed">
-          As .Net developer I worked in a web application for managing schools
+          As a .Net developer I worked in a web application for managing schools
           and universities, fixing bug's, creating custom features and training
           users.
         </p>
@@ -425,8 +425,8 @@
         </header>
         <p id="mobile-job-description-6" class="closed">
           I Worked as web developer using .Net/C# for creating CMS and other
-          systems, also created web sites by demand and helped creating a News
-          web app.
+          systems, also created web sites by demand and helped create a News web
+          app.
         </p>
       </section>
       <footer>
