--- a/soft-skills/index.html
+++ b/soft-skills/index.html
@@ -159,9 +159,9 @@
             />
           </div>
           <div>
-            <h2 class="title">Good communications skills</h2>
+            <h2 class="title">Good communication skills</h2>
             <p>
-              I like to chat, period. I Have no problems to express myself, I
+              I like to chat, period. I Have no problems expressing myself, I
               rather be honest and talk my mind then let things unsolved.
             </p>
           </div>
@@ -177,8 +177,8 @@
           <div>
             <h2 class="title">Team work spirit</h2>
             <p>
-              I’m a team player! I’m no shy to ask for help nor offer, I love to
-              share and learn.
+              I’m a team player! I’m not shy to ask for help nor offer, I love
+              to share and learn.
             </p>
           </div>
         </li>
@@ -194,7 +194,7 @@
             <h2 class="title">Creative mindset</h2>
             <p>
               I think outside the box, sometimes you gotta try crazy things to
-              see if is going to work.
+              see if it is going to work.
             </p>
           </div>
         </li>
@@ -209,7 +209,7 @@
           <div>
             <h2 class="title">Bilingual</h2>
             <p>
-              I'm a native portuguese speaker with a advanced level of english.
+              I'm a native portuguese speaker with an advanced level of english.
             </p>
           </div>
         </li>
@@ -222,7 +222,7 @@
             />
           </div>
           <div>
-            <h2 class="title">Focus in solving problems</h2>
+            <h2 class="title">Focus on solving problems</h2>
             <p>
               Problems are meant to be solved, after that we find the cause and
               learn from our mistakes.
@@ -240,7 +240,7 @@
           <div>
             <h2 class="title">Flexible</h2>
             <p>
-              I'm no afraid of leaving my comfortable zone to explore new
+              I'm not afraid of leaving my comfort zone to explore new
               possibilities or to help a teammate.
             </p>
           </div>
