Ajusting final details

--- a/index.html
+++ b/index.html
@@ -147,10 +147,6 @@
           <h1 class="page-title page-title-left">Hi, I'm Ricardo</h1>
           <h2 class="page-sub-title">Front end developer</h2>
         </header>
-        <!-- <p>
-          I'm an honest and hardworking person who loves to chat, meet people
-          and places.
-        </p> -->
         <p>
           I'm a curious and passionate web developer with over 6 years of
           experience.
@@ -159,6 +155,14 @@
           During my career I went through the back-end, front-end and even
           creating Android app's. Nowadays I'm working focused on front-end
           development and playing with Node JS in my free time.
+        </p>
+        <p class="mobile-contact">
+          Contact:&nbsp;<a
+            class="default-link"
+            href="mailto:mvargas.ricardo@gmail.com"
+            title="personal email"
+            >mvargas.ricardo@gmail.com</a
+          >
         </p>
       </div>
       <footer>
@@ -190,6 +194,7 @@
               >mvargas.ricardo@gmail.com</a
             >
           </span>
+          <span>Version: 1.0</span>
         </div>
         <div class="social-icons">
           <a
