--- a/soft-skills/index.html
+++ b/soft-skills/index.html
@@ -306,6 +306,7 @@
               >mvargas.ricardo@gmail.com</a
             >
           </span>
+          <span>Version: 1.0</span>
         </div>
         <div class="social-icons">
           <a
