--- a/about/index.html
+++ b/about/index.html
@@ -256,6 +256,7 @@
               >mvargas.ricardo@gmail.com</a
             >
           </span>
+          <span>Version: 1.0</span>
         </div>
         <div class="social-icons">
           <a
