--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -482,6 +482,7 @@
               >mvargas.ricardo@gmail.com</a
             >
           </span>
+          <span>Version: 1.0</span>
         </div>
         <div class="social-icons">
           <a
