Ajusting final details

--- a/tech-skills/index.html
+++ b/tech-skills/index.html
@@ -287,6 +287,13 @@
         </li>
         <li>
           <div class="skill-description">
+            <span class="skill-title-bg" style="width: 20%"></span>
+            <span class="skill-title">Net/C#</span>
+            <span class="skill-percent">20%</span>
+          </div>
+        </li>
+        <li>
+          <div class="skill-description">
             <span class="skill-title-bg" style="width: 60%"></span>
             <span class="skill-title">Git</span>
             <span class="skill-percent">60%</span>
