Finishing last details

--- a/tech-skills/index.html
+++ b/tech-skills/index.html
@@ -147,7 +147,7 @@
     </header>
     <article id="tech-skills" class="content main-content">
       <header class="custom-header">
-        <h1 class="page-title">My developer skills</h1>
+        <h1 class="page-title">My unicorn skills</h1>
       </header>
       <ul class="left-block">
         <li>
