--- a/soft-skills/index.html
+++ b/soft-skills/index.html
@@ -89,7 +89,7 @@
     <link href="../styles/footer.css" rel="stylesheet" />
     <link href="../styles/social-icons.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <title>About | Ricardo Vargas | Front End developer</title>
+    <title>Soft Skills | Ricardo Vargas | Front End developer</title>
   </head>
   <body>
     <header id="header">
