--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
     <link href="../styles/footer.css" rel="stylesheet" />
     <link href="../styles/social-icons.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <title>About | Ricardo Vargas | Front End developer</title>
+    <title>About | Ricardo Vargas | Frontend developer</title>
   </head>
   <body>
     <header id="header">
@@ -149,7 +149,7 @@
         <p>Born in Minas Gerais, I am a nice and cheerful person. I started working at age 14 to help my family and went through various types of jobs, such as a clerk, delivery man and office assistant. After finishing high school, I decided to move to Vitória (ES), where I could have better job opportunities and colleges.</p>
         <p>At 20 I got my first internship as a web developer and since then it's what I do and love! After a few years working as a web developer, I used my free time to study and build Android app's.</p>
         <p>After 5 years living in Vitória and working as a web developer, I decided to fulfill a long-standing dream: learning English and experiencing another culture. I sold everything that I had and moved to Dublin, Ireland, where I lived for 3 years.</p>
-        <p>I returned to Brazil after my student visa expired and, thanks to my effort and dedication, I resumed my developer career. Today I work focused on front end development and I'm studying Node JS. I'm always looking to improve my skills so that I can be a better developer and give my wife and daughter a comfortable life.</p>
+        <p>I returned to Brazil after my student visa expired and, thanks to my effort and dedication, I resumed my developer career. Today I work focused on frontend development and I'm studying Node JS. I'm always looking to improve my skills so that I can be a better developer and give my wife and daughter a comfortable life.</p>
       </section>
       <section>
         <h2 class="title">Memorable moments</h2>
