--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <link href="styles/home.css" rel="stylesheet" />
     <link href="styles/footer.css" rel="stylesheet" />
     <link href="styles/social-icons.css" rel="stylesheet" />
-    <title>Ricardo Vargas | Front End developer</title>
+    <title>Ricardo Vargas | Frontend developer</title>
   </head>
   <body>
     <header id="header">
@@ -145,7 +145,7 @@
       <div class="introduction-content">
         <header class="custom-header">
           <h1 class="page-title page-title-left">Hi, I'm Ricardo</h1>
-          <h2 class="page-sub-title">Front end developer</h2>
+          <h2 class="page-sub-title">Frontend developer</h2>
         </header>
         <p>
           I'm a curious and passionate web developer with over 6 years of
