--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
-    <meta property="og:site_name" content="Ricardo | Frontend developer" />
+    <meta property="og:site_name" content="Ricardo | Front-end developer" />
     <meta property="og:url" content="https://ricardomvargas.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Ricardo Vargas" />
@@ -35,12 +35,12 @@
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="Ricardo Vargas | Frontend developer"
+      content="Ricardo Vargas | Front-end developer"
     />
     <meta
       name="description"
       property="og:description"
-      content="A passionated frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and more."
+      content="A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and more."
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ricardomvargas" />
@@ -52,7 +52,7 @@
     />
     <meta
       name="twitter:description"
-      content="A passionated frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
+      content="A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
     />
     <link
       rel="apple-touch-icon"
@@ -80,7 +80,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1a1d" />
-    <meta name="description" content="Ricardo Vargas | Frontend developer" />
+    <meta name="description" content="Ricardo Vargas | Front-end developer" />
     <link rel="manifest" href="../manifest.json" />
     <link href="../styles/main.css" rel="stylesheet" />
     <link href="../styles/header.css" rel="stylesheet" />
@@ -89,7 +89,7 @@
     <link href="../styles/footer.css" rel="stylesheet" />
     <link href="../styles/social-icons.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <title>Curriculum | Ricardo Vargas | Frontend developer</title>
+    <title>Curriculum | Ricardo Vargas | Front-end developer</title>
   </head>
   <body>
     <header id="header">
