--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
-    <meta property="og:site_name" content="Ricardo | Frontend developer" />
+    <meta property="og:site_name" content="Ricardo | Front-end developer" />
     <meta property="og:url" content="https://ricardomvargas.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Ricardo Vargas" />
@@ -34,12 +34,12 @@
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="Ricardo Vargas | Frontend developer"
+      content="Ricardo Vargas | Front-end developer"
     />
     <meta
       name="description"
       property="og:description"
-      content="A passionated frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and more."
+      content="A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and more."
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ricardomvargas" />
@@ -51,7 +51,7 @@
     />
     <meta
       name="twitter:description"
-      content="A passionated frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
+      content="A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
     />
     <link
       rel="apple-touch-icon"
@@ -79,7 +79,7 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1a1d" />
-    <meta name="description" content="Ricardo Vargas | Frontend developer" />
+    <meta name="description" content="Ricardo Vargas | Front-end developer" />
     <link rel="manifest" href="../manifest.json" />
     <link href="../styles/main.css" rel="stylesheet" />
     <link href="../styles/header.css" rel="stylesheet" />
@@ -88,7 +88,7 @@
     <link href="../styles/footer.css" rel="stylesheet" />
     <link href="../styles/social-icons.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <title>About | Ricardo Vargas | Frontend developer</title>
+    <title>About | Ricardo Vargas | Front-end developer</title>
   </head>
   <body>
     <header id="header">
@@ -149,7 +149,7 @@
         <p>Born in Minas Gerais, I am a nice and cheerful person. I started working at age 14 to help my family and went through various types of jobs, such as a clerk, delivery man and office assistant. After finishing high school, I decided to move to Vitória (ES), where I could have better job opportunities and colleges.</p>
         <p>At 20 I got my first internship as a web developer and since then it's what I do and love! After a few years working as a web developer, I used my free time to study and build Android app's.</p>
         <p>After 5 years living in Vitória and working as a web developer, I decided to fulfill a long-standing dream: learning English and experiencing another culture. I sold everything that I had and moved to Dublin, Ireland, where I lived for 3 years.</p>
-        <p>I returned to Brazil after my student visa expired and, thanks to my effort and dedication, I resumed my developer career. Today I work focused on frontend development and I'm studying Node JS. I'm always looking to improve my skills so that I can be a better developer and give my wife and daughter a comfortable life.</p>
+        <p>I returned to Brazil after my student visa expired and, thanks to my effort and dedication, I resumed my developer career. Today I work focused on front end development and I'm studying Node JS. I'm always looking to improve my skills so that I can be a better developer and give my wife and daughter a comfortable life.</p>
       </section>
       <section>
         <h2 class="title">Memorable moments</h2>
