adding testing experience

--- a/tech-skills/index.html
+++ b/tech-skills/index.html
@@ -227,8 +227,6 @@
             <span class="skill-percent">35%</span>
           </div>
         </li>
-      </ul>
-      <ul class="right-block">
         <li>
           <div class="skill-description">
             <span class="skill-title-bg" style="width: 35%"></span>
@@ -236,6 +234,8 @@
             <span class="skill-percent">35%</span>
           </div>
         </li>
+      </ul>
+      <ul class="right-block">
         <li>
           <div class="skill-description">
             <span class="skill-title-bg" style="width: 30%"></span>
@@ -297,6 +297,20 @@
             <span class="skill-title-bg" style="width: 60%"></span>
             <span class="skill-title">Git</span>
             <span class="skill-percent">60%</span>
+          </div>
+        </li>
+        <li>
+          <div class="skill-description">
+            <span class="skill-title-bg" style="width: 10%"></span>
+            <span class="skill-title">Jest</span>
+            <span class="skill-percent">10%</span>
+          </div>
+        </li>
+        <li>
+          <div class="skill-description">
+            <span class="skill-title-bg" style="width: 10%"></span>
+            <span class="skill-title">Testing Libary</span>
+            <span class="skill-percent">10%</span>
           </div>
         </li>
         <li>
