feat: updating working experience

--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -154,8 +154,21 @@
         <img src="../assets/images/resume-time-line-close.svg" alt="|" />
         <div>
           <header>
+            <h1 class="title">Senior Front-end developer</h1>
+            <h2>Parana Banco | 2021 - current</h2>
+          </header>
+          <p>
+            At Paraná Banco I'm responsible for building interfaces for the
+            project that serves army officers.
+          </p>
+        </div>
+      </section>
+      <section class="experience-section">
+        <img src="../assets/images/resume-time-line-open.svg" alt="|" />
+        <div>
+          <header>
             <h1 class="title">Front-end developer</h1>
-            <h2>Agrotis | 2020 - current</h2>
+            <h2>Agrotis | 2020 - 2021</h2>
           </header>
           <p>
             Working as React developer in the grain storage module, building new
@@ -252,18 +265,17 @@
           />
           <div class="curriculum-title-content">
             <h1 class="title" onclick="handleImgExpandClick(1)">
-              Front-end developer
+              Senior Front-end developer
             </h1>
             <span class="small-text" onclick="handleImgExpandClick(1)"
-              >Agrotis | 2020 - current</span
+              >Paraná Banco | 2021 - current</span
             >
           </div>
           <hr />
         </header>
         <p id="mobile-job-description-1" class="closed">
-          Working as React developer in the grain storage module, building new
-          features, fixing bugs and re-writing class base components to function
-          components.
+          At Paraná Banco I'm responsible for building interfaces for the
+          project that serves army officers.
         </p>
       </section>
       <section class="experience-section-mobile">
@@ -285,17 +297,18 @@
           />
           <div class="curriculum-title-content">
             <h1 class="title" onclick="handleImgExpandClick(2)">
-              Web and mobile developer
+              Front-end developer
             </h1>
             <span class="small-text" onclick="handleImgExpandClick(2)"
-              >Primelan | 2014 - 2016</span
+              >Agrotis | 2020 - 2021</span
             >
           </div>
           <hr />
         </header>
         <p id="mobile-job-description-2" class="closed">
-          Creating android app's, websites and CMS by demand. I created the
-          Vitória(ES) city official android app.
+          Working as React developer in the grain storage module, building new
+          features, fixing bugs and re-writing class base components to function
+          components.
         </p>
       </section>
       <section class="experience-section-mobile">
@@ -317,18 +330,17 @@
           />
           <div class="curriculum-title-content">
             <h1 class="title" onclick="handleImgExpandClick(3)">
-              Full Stack developer
+              Web and mobile developer
             </h1>
             <span class="small-text" onclick="handleImgExpandClick(3)"
-              >Megawork | 2012 - 2014</span
+              >Primelan | 2014 - 2016</span
             >
           </div>
           <hr />
         </header>
         <p id="mobile-job-description-3" class="closed">
-          I worked with .Net 3.0 and C# to create a supplier pricing web
-          application that integrates with SAP. Also developed websites and CMS
-          by demand and I had some basic ABAP training.
+          Creating android app's, websites and CMS by demand. I created the
+          Vitória(ES) city official android app.
         </p>
       </section>
       <section class="experience-section-mobile">
@@ -338,7 +350,7 @@
             src="../assets/images/arrow-expand-close.svg"
             alt="Expand section"
             title="Expand section"
-            onclick="handleImgExpandClick(3)"
+            onclick="handleImgExpandClick(4)"
           />
           <img
             id="mobile-img-close-4"
@@ -350,18 +362,18 @@
           />
           <div class="curriculum-title-content">
             <h1 class="title" onclick="handleImgExpandClick(4)">
-              .Net developer
+              Full Stack developer
             </h1>
             <span class="small-text" onclick="handleImgExpandClick(4)"
-              >Phidelis | 2012 - 2012</span
+              >Megawork | 2012 - 2014</span
             >
           </div>
           <hr />
         </header>
         <p id="mobile-job-description-4" class="closed">
-          As a .Net developer I worked in a web application for managing schools
-          and universities, fixing bug's, creating custom features and training
-          users.
+          I worked with .Net 3.0 and C# to create a supplier pricing web
+          application that integrates with SAP. Also developed websites and CMS
+          by demand and I had some basic ABAP training.
         </p>
       </section>
       <section class="experience-section-mobile">
@@ -386,14 +398,15 @@
               .Net developer
             </h1>
             <span class="small-text" onclick="handleImgExpandClick(5)"
-              >Superius | 2011 - 2012</span
+              >Phidelis | 2012 - 2012</span
             >
           </div>
           <hr />
         </header>
         <p id="mobile-job-description-5" class="closed">
-          At Superius I was part of the web team that was building ERP system
-          using .Net 3.0, C#, DevExpress and Entity Framework.
+          As a .Net developer I worked in a web application for managing schools
+          and universities, fixing bug's, creating custom features and training
+          users.
         </p>
       </section>
       <section class="experience-section-mobile">
@@ -415,15 +428,47 @@
           />
           <div class="curriculum-title-content">
             <h1 class="title" onclick="handleImgExpandClick(6)">
-              Junior web developer
+              .Net developer
             </h1>
             <span class="small-text" onclick="handleImgExpandClick(6)"
-              >Vixtime | 2010 - 2011</span
+              >Superius | 2011 - 2012</span
             >
           </div>
           <hr />
         </header>
         <p id="mobile-job-description-6" class="closed">
+          At Superius I was part of the web team that was building ERP system
+          using .Net 3.0, C#, DevExpress and Entity Framework.
+        </p>
+      </section>
+      <section class="experience-section-mobile">
+        <header class="section-header">
+          <img
+            id="mobile-img-expand-7"
+            src="../assets/images/arrow-expand-close.svg"
+            alt="Expand section"
+            title="Expand section"
+            onclick="handleImgExpandClick(7)"
+          />
+          <img
+            id="mobile-img-close-7"
+            src="../assets/images/arrow-expand-open.svg"
+            alt="Expand section"
+            title="Expand section"
+            class="closed"
+            onclick="handleImgExpandClick(7)"
+          />
+          <div class="curriculum-title-content">
+            <h1 class="title" onclick="handleImgExpandClick(7)">
+              Junior web developer
+            </h1>
+            <span class="small-text" onclick="handleImgExpandClick(7)"
+              >Vixtime | 2010 - 2011</span
+            >
+          </div>
+          <hr />
+        </header>
+        <p id="mobile-job-description-7" class="closed">
           I Worked as web developer using .Net/C# for creating CMS and other
           systems, also created web sites by demand and helped create a News web
           app.
