--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <h2 class="page-sub-title">Front end developer</h2>
         </header>
         <p>
-          I'm a curious and passionate web developer with over 6 years of
+          I'm a curious and passionate web developer with 7 years of
           experience.
         </p>
         <p>
