--- a/curriculum/index.html
+++ b/curriculum/index.html
@@ -181,7 +181,7 @@
         <img src="../assets/images/resume-time-line-open.svg" alt="|" />
         <div>
           <header>
-            <h1 class="title">Web and mobile developer</h1>
+            <h1 class="title">Full Stack developer</h1>
             <h2>Primelan | 2014 - 2016</h2>
           </header>
           <p>
