--- a/tech-skills/index.html
+++ b/tech-skills/index.html
@@ -152,9 +152,9 @@
       <ul class="left-block">
         <li>
           <div class="skill-description">
-            <span class="skill-title-bg" style="width: 90%"></span>
+            <span class="skill-title-bg" style="width: 100%"></span>
             <span class="skill-title">HTML</span>
-            <span class="skill-percent">90%</span>
+            <span class="skill-percent">100%</span>
           </div>
         </li>
         <li>
@@ -166,9 +166,9 @@
         </li>
         <li>
           <div class="skill-description">
-            <span class="skill-title-bg" style="width: 80%"></span>
+            <span class="skill-title-bg" style="width: 90%"></span>
             <span class="skill-title">Javascript</span>
-            <span class="skill-percent">80%</span>
+            <span class="skill-percent">90%</span>
           </div>
         </li>
         <li>
@@ -234,8 +234,6 @@
             <span class="skill-percent">35%</span>
           </div>
         </li>
-      </ul>
-      <ul class="right-block">
         <li>
           <div class="skill-description">
             <span class="skill-title-bg" style="width: 30%"></span>
@@ -243,6 +241,8 @@
             <span class="skill-percent">30%</span>
           </div>
         </li>
+      </ul>
+      <ul class="right-block">
         <li>
           <div class="skill-description">
             <span class="skill-title-bg" style="width: 60%"></span>
@@ -301,16 +301,16 @@
         </li>
         <li>
           <div class="skill-description">
-            <span class="skill-title-bg" style="width: 15%"></span>
+            <span class="skill-title-bg" style="width: 20%"></span>
             <span class="skill-title">Jest</span>
-            <span class="skill-percent">15%</span>
+            <span class="skill-percent">20%</span>
           </div>
         </li>
         <li>
           <div class="skill-description">
-            <span class="skill-title-bg" style="width: 15%"></span>
+            <span class="skill-title-bg" style="width: 20%"></span>
             <span class="skill-title">Testing Libary</span>
-            <span class="skill-percent">15%</span>
+            <span class="skill-percent">20%</span>
           </div>
         </li>
         <li>
@@ -318,6 +318,20 @@
             <span class="skill-title-bg" style="width: 60%"></span>
             <span class="skill-title">Adobe Illustrator</span>
             <span class="skill-percent">60%</span>
+          </div>
+        </li>
+        <li>
+          <div class="skill-description">
+            <span class="skill-title-bg" style="width: 50%"></span>
+            <span class="skill-title">Webpack</span>
+            <span class="skill-percent">50%</span>
+          </div>
+        </li>
+        <li>
+          <div class="skill-description">
+            <span class="skill-title-bg" style="width: 10%"></span>
+            <span class="skill-title">NextJS</span>
+            <span class="skill-percent">10%</span>
           </div>
         </li>
       </ul>
