--- a/index.html
+++ b/index.html
@@ -124,11 +124,7 @@
           <h1>Hi there!</h1>
         </header>
         <p>
-          I'm a web developer with 7 years of experience. I started my carrear
-          as a backend developer and gradually change my focus to the frontend
-          development, just because I love to build user interfaces and UX. I'm
-          a skiled developer that domintes HTML, CSS and Javascript and working
-          with React daily and always looking for oportunities to learn.
+          I'm a web developer with 7 years of experience. I started my career as a backend developer and gradually changed my focus to the frontend development, just because I love to build user interfaces and UX. I'm a skilled developer that dominates HTML, CSS and Javascript and I'm working with React.
         </p>
         <footer>
           <a
