feat: updating some texts

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="Ricardo Vargas | Front-end developer"
+      content="Ricardo Vargas | Frontend developer"
     />
     <meta
       name="description"
       property="og:description"
-      content="A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and more."
+      content="A passionated Frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and more."
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ricardomvargas" />
@@ -40,7 +40,7 @@
     />
     <meta
       name="twitter:description"
-      content="A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
+      content="A passionated Frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
     />
     <link
       rel="apple-touch-icon"
@@ -68,13 +68,13 @@
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1a1a1d" />
-    <meta name="description" content="Ricardo Vargas | Front-end developer" />
+    <meta name="description" content="Ricardo Vargas | Frontend developer" />
     <link rel="manifest" href="/manifest.json" />
     <link href="styles/styles.css" rel="stylesheet" />
     <link href="styles/about.css" rel="stylesheet" />
     <link href="styles/soft-skills.css" rel="stylesheet" />
     <link href="styles/tech-skills.css" rel="stylesheet" />
-    <title>Ricardo Vargas | Front End developer</title>
+    <title>Ricardo Vargas | Frontend developer</title>
   </head>
   <body>
     <article id="presentation">
@@ -87,7 +87,7 @@
         <header>
           <div>
             <h1>Ricardo Vargas</h1>
-            <h2>Front end developer</h2>
+            <h2>Frontend developer</h2>
           </div>
           <section>
             <a
@@ -124,7 +124,11 @@
           <h1>Hi there!</h1>
         </header>
         <p>
-          I'm a web developer with 7 years of experience. I started my career as a backend developer and gradually changed my focus to the frontend development, just because I love to build user interfaces and UX. I'm a skilled developer that dominates HTML, CSS and Javascript and I'm working with React.
+          I'm a web developer with 7 years of experience. I started my career as
+          a backend developer and gradually changed my focus to the frontend
+          development, just because I love to build user interfaces and UX. I'm
+          a skilled developer that dominates HTML, CSS and Javascript and I'm
+          working with React.
         </p>
         <footer>
           <a
@@ -281,7 +285,7 @@
     <article id="tech-skills">
       <main>
         <header>
-          <h1>My developer skills</h1>
+          <h1>My skills</h1>
         </header>
         <ul class="left-block">
           <li>
