feat: updating cv file and skills

--- a/index.html
+++ b/index.html
@@ -379,8 +379,6 @@
               <span class="skill-percent">30%</span>
             </div>
           </li>
-        </ul>
-        <ul class="right-block">
           <li>
             <div class="skill-description">
               <span class="skill-title-bg" style="width: 60%"></span>
@@ -388,6 +386,8 @@
               <span class="skill-percent">60%</span>
             </div>
           </li>
+        </ul>
+        <ul class="right-block">
           <li>
             <div class="skill-description">
               <span class="skill-title-bg" style="width: 50%"></span>
@@ -470,6 +470,13 @@
               <span class="skill-title-bg" style="width: 60%"></span>
               <span class="skill-title">Adobe Illustrator</span>
               <span class="skill-percent">60%</span>
+            </div>
+          </li>
+          <li>
+            <div class="skill-description">
+              <span class="skill-title-bg" style="width: 40%"></span>
+              <span class="skill-title">Figma</span>
+              <span class="skill-percent">40%</span>
             </div>
           </li>
         </ul>
