--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
         </header>
         <p>
           I'm a web developer with 8 years of experience. I started my career as
-          a backend developer and gradually changed my focus to the frontend
-          development, just because I love to build user interfaces and UX. I'm
-          a skilled developer that dominates HTML, CSS and Javascript and I'm
-          working with React.
+          a backend developer and gradually changed my focus to frontend
+          development, because I love to build user interfaces and work close to
+          the UX team. I'm a skilled developer that dominates HTML, CSS and
+          Javascript and I'm currently working with React.
         </p>
         <footer>
           <a
