adding restfull api xp

--- a/index.html
+++ b/index.html
@@ -6,25 +6,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta name="author" content="Ricardo Vargas" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet" />
     <meta property="og:site_name" content="Ricardo | Frontend developer" />
     <meta property="og:url" content="https://ricardomvargas.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Ricardo Vargas" />
-    <meta
-      property="og:image"
-      content="/assets/images/social-preview/og-img.png"
-    />
+    <meta property="og:image" content="/assets/images/social-preview/og-img.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta
-      property="og:image:alt"
-      content="Ricardo Vargas | Frontend developer"
-    />
+    <meta property="og:image:alt" content="Ricardo Vargas | Frontend developer" />
     <meta
       name="description"
       property="og:description"
@@ -34,10 +25,7 @@
     <meta name="twitter:site" content="@ricardomvargas" />
     <meta name="twitter:creator" content="@ricardomvargas" />
     <meta name="twitter:title" content="Ricardo Vargas" />
-    <meta
-      name="twitter:image"
-      content="https://ricardomvargas.github.io/og-img-twiiter.png"
-    />
+    <meta name="twitter:image" content="https://ricardomvargas.github.io/og-img-twiiter.png" />
     <meta
       name="twitter:description"
       content="A passionated Frontend developer | React, Typescript, Redux, HTML, CSS, javascript, SASS and +."
@@ -79,11 +67,7 @@
   <body>
     <article id="presentation">
       <main>
-        <img
-          src="assets/images/profile-pic-square.jpg"
-          alt="Ricardo Vargas"
-          class="profile-pic"
-        />
+        <img src="assets/images/profile-pic-square.jpg" alt="Ricardo Vargas" class="profile-pic" />
         <header>
           <div>
             <h1>Ricardo Vargas</h1>
@@ -124,23 +108,15 @@
           <h1>Hi there!</h1>
         </header>
         <p>
-          I'm a web developer with 8 years of experience. I started my career as
-          a backend developer and gradually changed my focus to frontend
-          development, because I love to build user interfaces and work close to
-          the UX team. I'm a skilled developer that dominates HTML, CSS and
-          Javascript and I'm currently working with React.
+          I'm a web developer with 8 years of experience. I started my career as a backend developer
+          and gradually changed my focus to frontend development, because I love to build user
+          interfaces and work close to the UX team. I'm a skilled developer that dominates HTML, CSS
+          and Javascript and I'm currently working with React.
         </p>
         <footer>
-          <a
-            href="assets/curriculum/rv.pdf"
-            class="cv-btn"
-            download="ricardo-vargas-cv.pdf"
-          >
+          <a href="assets/curriculum/rv.pdf" class="cv-btn" download="ricardo-vargas-cv.pdf">
             <span>Download my full CV</span>
-            <img
-              src="assets/images/download-icon.svg"
-              alt="Download my full CV"
-            />
+            <img src="assets/images/download-icon.svg" alt="Download my full CV" />
           </a>
         </footer>
       </main>
@@ -162,8 +138,8 @@
             <div>
               <h2 class="title">Good communication skills</h2>
               <p>
-                I like to chat, period. I Have no problems expressing myself, I
-                rather be honest and talk my mind then let things unsolved.
+                I like to chat, period. I Have no problems expressing myself, I rather be honest and
+                talk my mind then let things unsolved.
               </p>
             </div>
           </li>
@@ -178,8 +154,7 @@
             <div>
               <h2 class="title">Team work spirit</h2>
               <p>
-                I’m a team player! I’m not shy to ask for help nor offer, I love
-                to share and learn.
+                I’m a team player! I’m not shy to ask for help nor offer, I love to share and learn.
               </p>
             </div>
           </li>
@@ -194,8 +169,8 @@
             <div>
               <h2 class="title">Creative mindset</h2>
               <p>
-                I think outside the box, sometimes you gotta try crazy things to
-                see if it is going to work.
+                I think outside the box, sometimes you gotta try crazy things to see if it is going
+                to work.
               </p>
             </div>
           </li>
@@ -209,10 +184,7 @@
             </div>
             <div>
               <h2 class="title">Bilingual</h2>
-              <p>
-                I'm a native portuguese speaker with an advanced level of
-                english.
-              </p>
+              <p>I'm a native portuguese speaker with an advanced level of english.</p>
             </div>
           </li>
           <li>
@@ -226,8 +198,8 @@
             <div>
               <h2 class="title">Focus on solving problems</h2>
               <p>
-                Problems are meant to be solved, after that we find the cause
-                and learn from our mistakes.
+                Problems are meant to be solved, after that we find the cause and learn from our
+                mistakes.
               </p>
             </div>
           </li>
@@ -242,24 +214,20 @@
             <div>
               <h2 class="title">Flexible</h2>
               <p>
-                I'm not afraid of leaving my comfort zone to explore new
-                possibilities or to help a teammate.
+                I'm not afraid of leaving my comfort zone to explore new possibilities or to help a
+                teammate.
               </p>
             </div>
           </li>
           <li>
             <div class="div-img">
-              <img
-                src="assets/images/soft-skills-emphaty.svg"
-                alt="Emphaty Icon"
-                title="Empathy"
-              />
+              <img src="assets/images/soft-skills-emphaty.svg" alt="Emphaty Icon" title="Empathy" />
             </div>
             <div>
               <h2 class="title">Empathy</h2>
               <p>
-                I don't mind where people come from or what they choose to be,
-                everyone must be respected, love conquers all.
+                I don't mind where people come from or what they choose to be, everyone must be
+                respected, love conquers all.
               </p>
             </div>
           </li>
@@ -273,10 +241,7 @@
             </div>
             <div>
               <h2 class="title">Accountability and humbleness</h2>
-              <p>
-                I'm not afraid to admit my mistakes, doing so is a great way to
-                evolve.
-              </p>
+              <p>I'm not afraid to admit my mistakes, doing so is a great way to evolve.</p>
             </div>
           </li>
         </ul>
@@ -388,6 +353,13 @@
           </li>
         </ul>
         <ul class="right-block">
+          <li>
+            <div class="skill-description">
+              <span class="skill-title-bg" style="width: 70%"></span>
+              <span class="skill-title">RESTful API</span>
+              <span class="skill-percent">70%</span>
+            </div>
+          </li>
           <li>
             <div class="skill-description">
               <span class="skill-title-bg" style="width: 50%"></span>
