updating cv details and skills section

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <li>
             <div class="skill-description">
               <span class="skill-title-bg" style="width: 70%"></span>
-              <span class="skill-title">RESTful API</span>
+              <span class="skill-title">REST API</span>
               <span class="skill-percent">70%</span>
             </div>
           </li>
