updating cv and skills

--- a/index.html
+++ b/index.html
@@ -351,6 +351,13 @@
               <span class="skill-percent">60%</span>
             </div>
           </li>
+          <li>
+            <div class="skill-description">
+              <span class="skill-title-bg" style="width: 50%"></span>
+              <span class="skill-title">Axios</span>
+              <span class="skill-percent">50%</span>
+            </div>
+          </li>
         </ul>
         <ul class="right-block">
           <li>
@@ -362,9 +369,9 @@
           </li>
           <li>
             <div class="skill-description">
-              <span class="skill-title-bg" style="width: 50%"></span>
-              <span class="skill-title">Axios</span>
-              <span class="skill-percent">50%</span>
+              <span class="skill-title-bg" style="width: 10%"></span>
+              <span class="skill-title">GraphQL</span>
+              <span class="skill-percent">10%</span>
             </div>
           </li>
           <li>
