adding OpenLayers skill

--- a/index.html
+++ b/index.html
@@ -438,6 +438,13 @@
           </li>
           <li>
             <div class="skill-description">
+              <span class="skill-title-bg" style="width: 15%"></span>
+              <span class="skill-title">OpenLayers</span>
+              <span class="skill-percent">15%</span>
+            </div>
+          </li>
+          <li>
+            <div class="skill-description">
               <span class="skill-title-bg" style="width: 50%"></span>
               <span class="skill-title">Adobe Illustrator</span>
               <span class="skill-percent">50%</span>
